fixed_screen_distortion_by_gsap

--- a/src/Components/Projects2.css
+++ b/src/Components/Projects2.css
@@ -2,6 +2,7 @@
     margin: 40px auto;
     width: 50%;
     background-color: #14161B;
+    overflow-x: hidden;
 }
 
 .all-projects {
